--- a/app/globals.css
+++ b/app/globals.css
@@ -284,8 +284,8 @@ body {
 /* třetí úroveň – seznam tiles */
 .sidebar__sublist {
   list-style: none;
-  margin: 2px 0 4px;
-  padding-left: 0;
+  margin: 0;
+  padding-left: 2.75rem;
 }
 /* řádek třetí úrovně */
 .sidebar__subitem {
